version/0.59/_sources/grpc_api/grpc/_autosummary/pyedb.grpc.edb.Edb.rst.txt
Edb
===

.. currentmodule:: pyedb.grpc.edb

.. autoclass:: Edb

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Edb.add_design_variable
      
      
      Edb.add_project_variable
      
      
      Edb.are_port_reference_terminals_connected
      
      
      Edb.auto_parametrize_design
      
      
      Edb.calculate_initial_extent
      
      
      Edb.change_design_variable_value
      
      
      Edb.close
      
      
      Edb.close_edb
      
      
      Edb.compare
      
      
      Edb.copy_cells
      
      
      Edb.copy_zones
      
      
      Edb.create
      
      
      Edb.create_current_source
      
      
      Edb.create_hfss_setup
      
      
      Edb.create_hfsspi_setup
      
      
      Edb.create_model_for_arbitrary_wave_ports
      
      
      Edb.create_port
      
      
      Edb.create_raptorx_setup
      
      
      Edb.create_siwave_dc_setup
      
      
      Edb.create_siwave_syz_setup
      
      
      Edb.create_voltage_probe
      
      
      Edb.create_voltage_source
      
      
      Edb.cutout
      
      
      Edb.cutout_multizone_layout
      
      
      Edb.delete
      
      
      Edb.edb_exception
      
      
      Edb.execute
      
      
      Edb.export_gds_comp_xml
      
      
      Edb.export_hfss
      
      
      Edb.export_layout_component
      
      
      Edb.export_maxwell
      
      
      Edb.export_q3d
      
      
      Edb.export_siwave_dc_results
      
      
      Edb.export_to_ipc2581
      
      
      Edb.find_by_id
      
      
      Edb.get_all_variable_names
      
      
      Edb.get_bounding_box
      
      
      Edb.get_conformal_polygon_from_netlist
      
      
      Edb.get_connected_objects
      
      
      Edb.get_point_terminal
      
      
      Edb.get_product_property
      
      
      Edb.get_product_property_ids
      
      
      Edb.get_statistics
      
      
      Edb.get_variable
      
      
      Edb.import_gds_file
      
      
      Edb.import_layout_component
      
      
      Edb.import_layout_file
      
      
      Edb.import_layout_pcb
      
      
      Edb.import_material_from_control_file
      
      
      Edb.number_with_units
      
      
      Edb.open
      
      
      Edb.point_3d
      
      
      Edb.point_data
      
      
      Edb.save
      
      
      Edb.save_as
      
      
      Edb.save_edb
      
      
      Edb.save_edb_as
      
      
      Edb.scale
      
      
      Edb.set_product_property
      
      
      Edb.solve_siwave
      
      
      Edb.value
      
      
      Edb.variable_exists
      
      
      Edb.write_export3d_option_config_file
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Edb.active_cell
      Edb.active_db
      Edb.active_layout
      Edb.ansys_em_path
      Edb.apd_bondwire_defs
      Edb.cell_names
      Edb.circuit_cells
      Edb.component_defs
      Edb.components
      Edb.configuration
      Edb.core
      Edb.dataset_defs
      Edb.db
      Edb.definitions
      Edb.design_variables
      Edb.differential_pairs
      Edb.directory
      Edb.edb_uid
      Edb.excitations
      Edb.excitations_nets
      Edb.extended_nets
      Edb.footprint_cells
      Edb.hfss
      Edb.hfss_setups
      Edb.is_read_only
      Edb.jedec4_bondwire_defs
      Edb.jedec5_bondwire_defs
      Edb.layout
      Edb.layout_instance
      Edb.layout_validation
      Edb.material_defs
      Edb.materials
      Edb.modeler
      Edb.net_classes
      Edb.nets
      Edb.package_defs
      Edb.padstack_defs
      Edb.padstacks
      Edb.ports
      Edb.probes
      Edb.project_variables
      Edb.setups
      Edb.siwave
      Edb.siwave_ac_setups
      Edb.siwave_dc_setups
      Edb.source
      Edb.source_excitation
      Edb.source_version
      Edb.sources
      Edb.stackup
      Edb.terminals
      Edb.top_circuit_cells
      Edb.variables
      Edb.voltage_regulator_modules
      Edb.workflow
   
   